# autoresearch-inference

./: .gitignore  LEARNINGS.md  README.md  RESULTS.md  analysis.ipynb  analyze.py  infer.py  leaderboard.py  prepare.py  program.md  pyproject.toml  results.tsv  run_loop.sh  run_multi.sh  run_resume.sh  submit_run.py
leaderboard/: index.html
leaderboard/runs/: a100-40gb_llama3-1-8b_20260316.json  a100-40gb_qwen2-5-7b_20260318.json  h100_llama3-1-70b_20260321.json  h100_qwen2-5-7b_20260319.json  nvidia-geforce-rtx-5090-meta-llama-llama-3-2-1b-20260327-3d1087.json  nvidia-geforce-rtx-5090-meta-llama-llama-3-2-1b-20260327-425617.json  nvidia-rtx-pro-6000-blackwell-workstation-edition-meta-llama-llama-3-1-70b-20260327-eba296.json  rtx3060ti_qwen2-5-0-5b_20260317.json  rtx4070_qwen2-5-0-5b_20260323.json  rtx4090_qwen2-5-0-5b_20260322.json  rtx4090_qwen2-5-7b_20260320.json
prompts/: prompts.json
tests/: test_analyze.py  test_leaderboard.py  test_prepare.py
