[project]
name = "autoresearch-inference"
version = "0.2.0"
description = "Autonomous LLM inference optimization research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "transformers>=4.46",
    "accelerate>=1.0",
    "torchao>=0.7",
    "huggingface-hub>=0.26",
    "matplotlib>=3.10",
    "pandas>=2.2",
]

[project.optional-dependencies]
analysis = [
    "jupyter",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["prepare", "analyze", "infer"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
